

* Fixed UPSERT in cluster: It does now read it's own write, which should prevent
  unique contraint violations, due to double inserts of the same document.

* Fix error message in case of index unique constraint violations. They were
  lacking the actual error message (i.e. "unique constraint violated") and
  only showed the index details. The issue was introduced only in devel in Feb.

* Allow process-specific logfile names.

  This change allows replacing '$PID' with the current process id in the 
  `--log.output` and `--audit.output` startup parameters.
  This way it is easier to write process-specific logfiles.

* Backport a bugfix from upstream RocksDB for opening encrypted files with
  small sizes. Without the bugfix, the server may run into assertion failures
  during recovery.

* Fix duplicate leaving of V8 contexts when returning streaming cursors.
  The `exitContext` call done on query shutdown could previously try to exit
  the V8 context multiple times, which would cause undefined behavior. Now
  we are tracking if we already left the context to prevent duplicate invocation.

* In a cluster, do not create the collections `_statistics`, `_statistics15` and 
  `statisticsRaw` on DB servers. These collections should only be created by the
  coordinator, and should translate into 2 shards each on DB servers. But there
  shouldn't be shards named `_statistics*` on DB servers.

* Fixed two bogus messages about hotbackup restore:
  - Coordinators unconditionally logged the message "Got a hotbackup restore
    event, getting new cluster-wide unique IDs..." on shutdown. This was not
    necessarily related to a hotbackup restore.
  - DB servers unconditionally logged the message "Strange, we could not 
    unregister the hotbackup restore callback." on shutdown, although this was
    meaningless.

* Rename "save" return attribute to "dst" in AQL functions `DATE_UTCTOLOCAL` and
  `DATE_LOCALTOUTC`.
