@@ -1,11 +1,0 @@
-name: arangodb_agency_supervision_accum_runtime_msec_total
-help: |
-  Accumulated supervision runtime.
-unit: ms
-type: counter
-category: Agency
-complexity: simple
-exposedBy:
-  - agent
-description: |
-  Accumulated supervision runtime.
