@@ -1,11 +1,0 @@
-name: arangodb_agency_supervision_accum_runtime_wait_for_replication_msec_total
-help: |
-  Accumulated supervision wait for replication time.
-unit: ms
-type: counter
-category: Agency
-complexity: medium
-exposedBy:
-  - agent
-description: |
-  Accumulated supervision wait for replication time.
