@@ -1,13 +1,0 @@
-name: arangodb_aql_slow_query_total
-help: |
-  Number of slow AQL queries.
-unit: number
-type: counter
-category: AQL
-complexity: simple
-exposedBy:
-  - coordinator
-  - dbserver
-  - agent
-description: |
-  Number of slow AQL queries.
