@@ -1,12 +1,0 @@
-name: arangodb_load_plan_accum_runtime_msec_total
-help: |
-  Accumulated runtime of `Plan` loading
-unit: ms
-type: counter
-category: Maintenance
-complexity: medium
-exposedBy:
-  - coordinator
-  - dbserver
-description: |
-  Accumulated runtime of `Plan` loading
