@@ -1,11 +1,0 @@
-name: arangodb_maintenance_action_accum_runtime_msec_total
-help: |
-  Accumulated action queue time for Maintenance.
-unit: ms
-type: counter
-category: Maintenance
-complexity: advanced
-exposedBy:
-  - dbserver
-description: |
-  Accumulated action runtime for Maintenance.
