@@ -1,11 +1,15 @@
-name: arangodb_maintenance_action_done_msec_total
+name: arangodb_maintenance_action_done_total
 help: |
-  Accumulated number of action queue time for Maintenance.
-unit: ms
+  Counter of actions that are done and have been removed from the registry.
+unit: number
 type: counter
 category: Maintenance
-complexity: advanced
+complexity: simple
 exposedBy:
   - dbserver
 description: |
-  Accumulated action runtime for Maintenance.
+  Database servers execute reconciliation actions to let the cluster converge
+  to the desired state. Actions are created, registered, queued and executed.
+  Once they are done they will eventually be removed.
+
+  This metric counts the number of actions that are done and have been removed.
