@@ -4,8 +4,13 @@ help: |
 unit: number
 type: counter
 category: Maintenance
-complexity: medium
+complexity: advanced
 exposedBy:
   - dbserver
 description: |
-  Counter of actions that have been discarded because of a duplicate.
+  Database servers execute reconciliation actions to let the cluster converge
+  to the desired state. Actions are created, registered, queued and executed.
+  Once they are done they will eventually be removed.
+
+  This metric counts the number of actions that have been created but found to
+  be a duplicate of a already queued action.
