@@ -1,12 +1,0 @@
-name: arangodb_maintenance_agency_sync_accum_runtime_msec_total
-help: |
-  Accumulated runtime of agency sync phase.
-unit: ms
-type: counter
-category: Maintenance
-complexity: medium
-exposedBy:
-  - dbserver
-description: |
-  Accumulated runtime of agency sync phase. This includes phase one and
-  phase two.
