@@ -4,8 +4,16 @@ help: |
 unit: ms
 type: histogram
 category: Maintenance
-complexity: medium
+complexity: simple
 exposedBy:
   - dbserver
 description: |
-  Histogram for total time spent on agency sync.
+  Database servers execute reconciliation actions to let the cluster converge
+  to the desired state. To identify the target state differences in the meta
+  data store provided by the agency are investigated and local changes are
+  reported. This process is called agency sync and is executed in regular
+  intervals.
+
+  This metric tracks the runtime of individual agency syncs in a histogram.
+  During DDL operations the runtime can increase but should generally be below
+  1s.
