@@ -1,11 +1,0 @@
-name: arangodb_maintenance_phase1_accum_runtime_msec_total
-help: |
-  Accumulated runtime of phase one in maintenance.
-unit: ms
-type: counter
-category: Maintenance
-complexity: simple
-exposedBy:
-  - dbserver
-description: |
-  Accumulated runtime of phase one in maintenance.
