@@ -4,8 +4,15 @@ help: |
 unit: ms
 type: histogram
 category: Maintenance
-complexity: simple
+complexity: advanced
 exposedBy:
   - dbserver
 description: |
-  Maintenance Phase 2 runtime histogram.
+  Database servers execute reconciliation actions to let the cluster converge
+  to the desired state. To identify the target state differences in the meta
+  data store provided by the agency are investigated and local changes are
+  reported. This process is called agency sync and is executed in regular
+  intervals.
+
+  This metric tracks the runtime of phase2 of an agency sync. Phase2 calculates
+  what actions to execute given the difference of the local and target state.
